--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
+<script>
+  AOS.init();
+</script>
     <header>
         <div class="container">
             <div class="burger-menu" data-status="off">
@@ -32,6 +37,9 @@
             </nav>
         </div>
     </header>
+    <div class="flex justify-center align-center mt-16">
+    <input aria-label="search" id="searchBar" name="search" placeholder="Rechercher..." type="search">
+    </div>
     <main id="recetteContainer">
     <section class="container">
         <div class="card">
@@ -130,6 +138,10 @@
         </div>
     </section>
     </main>
+
+    
+    <section class="container" id="article">
+    </section>
 </body>
 
 </html>
